# CS311.P11

./: README.md
api/: pyproject.toml  requirements.txt  run.py
api/prompts/: manimDocs.py
api/routes/: chat_generation.py  video_rendering.py
fe/: package.json
fe/messages/: en.json
fe/src/app/[locale]/: layout.tsx  page.tsx
fe/src/components/: Main.tsx  TryAnimo.tsx
