
[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4==0.0.1",
    "ffmpeg==1.4",
    "flask==2.2.2",
    "google-cloud-storage==2.10.0",
    "gunicorn==20.1.0",
    "langchain-community==0.0.34",
    "langchain==0.1.16",
    "openai>=1.24.0,<2.0.0",
    "python-dotenv==1.0.0",
    "werkzeug==2.3.7",
    "langchain-openai==0.1.6",
    "langchain-anthropic==0.1.11",
    "langgraph==0.0.38",
    "anthropic==0.37.1",
    "qianfan==0.3.11",
    "google-cloud-logging==3.10.0",
    "flask-cors==3.0.10",
    "azure-storage-blob==12.18.2",
    "azure-monitor-opentelemetry==1.4.2",
    "pillow>=11.1.0",
]
